<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/relativeLayoutImgSol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgLogoS"
                            android:layout_width="@dimen/perfil_image_size2"
                            android:layout_height="@dimen/perfil_image_size2"
                            android:src="@drawable/logo_proyecto"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="40dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/crearpqr"
                            android:layout_centerInParent="true"
                            android:textSize="36sp" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutUserS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etDocumentS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/documento"
                            android:inputType="textNoSuggestions"
                            android:nextFocusDown="@+id/etPasswordU"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/names"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutTipoSolS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <TextView
                            android:drawablePadding="25dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:drawableLeft="@drawable/list"
                            android:layout_width="match_parent"
                            android:textColor="@color/hint2"
                            android:layout_height="wrap_content"
                            android:text="@string/tiposol"
                            android:textSize="17sp" />
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:id="@+id/spTipoSol"
                        android:layout_marginTop="10dp"
                        android:layout_height="40dp"
                        android:layout_width="match_parent"></Spinner>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutSucursalS"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <TextView
                            android:drawablePadding="25dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:drawableLeft="@drawable/home_map"
                            android:layout_width="match_parent"
                            android:textColor="@color/hint2"
                            android:layout_height="wrap_content"
                            android:text="@string/sucursal"
                            android:textSize="17sp"
                            android:id="@+id/textView" />
                    </android.support.design.widget.TextInputLayout>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_height="40dp"
                        android:id="@+id/spSucursalS">


                    </Spinner>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDescriptionS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etDescriptionS"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:inputType="textNoSuggestions|textCapWords"
                            android:nextFocusDown="@+id/etContactU"
                            android:maxLines="10"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/pencil"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutButtonU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCrearPqr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Insertar"
                        android:textColor="@color/cardview_light_background"
                        android:backgroundTint="@color/primary"
                        />
                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>