<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.quejatec.Activities.RegisterActivity">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/relativeLayoutImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imgLogoR"
                            android:layout_width="@dimen/perfil_image_size2"
                            android:layout_height="@dimen/perfil_image_size2"
                            android:src="@drawable/logo_proyecto"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                       <TextView
                           android:layout_marginTop="40dp"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/crearCuenta"
                           android:layout_centerInParent="true"
                           android:textSize="36sp" />
                   </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etDocumentR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/documento"
                            android:inputType="textNoSuggestions"
                            android:nextFocusDown="@+id/etPasswordR"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/names"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutPasswordR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etPasswordR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:nextFocusDown="@+id/etEmailR"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/lockgreen"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutEmailR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etEmailR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:nextFocusDown="@+id/etNameR"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/email"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutLastNamesR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etNameR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textNoSuggestions|textCapWords"
                            android:nextFocusDown="@+id/etContactR"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/accountgreen"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutNamesR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etContactR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact"
                            android:inputType="textNoSuggestions|textCapWords"
                            android:nextFocusDown="@+id/etDirectionR"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/cellphone"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutDirectionR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/Hint2"
                        android:textColorHint="@color/hint2">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etDirectionR"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/direction"
                            android:inputType="textNoSuggestions"
                            android:maxLines="1"
                            android:backgroundTint="@color/hint2"
                            android:drawableLeft="@drawable/direction"
                            android:drawablePadding="20dp"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearLayoutButtonR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registrarse"
                        android:textColor="@color/cardview_light_background"
                        android:backgroundTint="@color/primary"
                        />
                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
